--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
     <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
     <image.version>${project.version}</image.version>
     <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+    <sonar.projectKey>BluntApp_email-service</sonar.projectKey>
+    <sonar.organization>bluntapp</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.login>d184ddd561c39f946f7606d7a20df6ef997c175b</sonar.login>
   </properties>
 
   <dependencies>
